Fixed bug #15565: Labels of pages deep in the tree or with long titles are cut off as horizontal scrolling is disabled
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/branches/TYPO3_4-4@8698 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/sysext/t3skin/stylesheets/structure/element_tree.css
+++ b/typo3/sysext/t3skin/stylesheets/structure/element_tree.css
@@ -86,7 +86,6 @@ ul.tree ul li {
 ul.tree div.treeLinkItem {
 	display: block;
 	height: 16px;
-	overflow: hidden;
 	padding-left: 2px;
 }
 span.dragIcon {
